--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Head</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h1>Yo What's Good?</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="image ">
+				<img class="img-thumbnail" src="random.JPG">
+			</div>
+		</div>
+		<div class="row">
+			<div class="links intro offset-sm-1 offset-sm-3 col-sm-10 col-md-6">
+				Welcome Bro!
+			</div>
+		</div>
+		<div class="row">
+			<div class="links  offset-sm-1 offset-sm-3 col-sm-10 col-md-6">
+				<a href="about.html">About Me</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="links offset-sm-1 offset-sm-3 col-sm-10 col-md-6">
+				<a href="http://rekt4.github.io/Pong-Game">Pong Game</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="links offset-sm-1 offset-sm-3 col-sm-10 col-md-6">
+				<a href="about.html">About Her</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="links offset-sm-1 offset-sm-3 col-sm-10 col-md-6">
+				<a href="about.html">About Him</a>
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="main.js"></script>
+</body>
+</html>
